Remove use of deprecated methods that were deprecated since Java 9.